[gd_scene load_steps=11 format=3 uid="uid://da1c0vlncs7bq"]

[ext_resource type="FontFile" uid="uid://b8253e5gv0ngi" path="res://Font/superstar_memesbruh03.ttf" id="1_jbn04"]
[ext_resource type="Script" path="res://gameover.gd" id="1_pfrdl"]
[ext_resource type="Texture2D" uid="uid://clqgvjnb1l331" path="res://UI/grid1.png" id="2_5ypgj"]
[ext_resource type="StyleBox" uid="uid://wk1fbrx7mgd7" path="res://Font/buttonstyle.tres" id="3_plbpa"]
[ext_resource type="Texture2D" uid="uid://cqg7fb5xhjq7a" path="res://UI/box1.png" id="5_cqkc1"]
[ext_resource type="Texture2D" uid="uid://dqbnmbjcu6dea" path="res://spritesheet (3).png" id="6_hb363"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c37yr"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_5d1xq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rlv8p"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_etj2u"]
_data = {
"RESET": SubResource("Animation_5d1xq"),
"idle": SubResource("Animation_rlv8p")
}

[node name="gameover" type="CanvasLayer"]
script = ExtResource("1_pfrdl")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 320.0
offset_bottom = 184.0
color = Color(0.823529, 0.258824, 0.203922, 1)

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.196078)
position = Vector2(160, 90)
texture = ExtResource("2_5ypgj")

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(208, 66)
texture = ExtResource("5_cqkc1")

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -93.0
offset_top = 24.0
offset_right = 93.0
offset_bottom = 48.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_jbn04")
theme_override_font_sizes/font_size = 24
text = "You got Captured!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="retry" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 24.0
offset_top = 55.0
offset_right = 80.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.823529, 0.258824, 0.203922, 1)
theme_override_colors/font_pressed_color = Color(0.823529, 0.258824, 0.203922, 1)
theme_override_colors/font_hover_color = Color(0.823529, 0.258824, 0.203922, 1)
theme_override_colors/font_focus_color = Color(0.823529, 0.258824, 0.203922, 1)
theme_override_colors/font_hover_pressed_color = Color(0.823529, 0.258824, 0.203922, 1)
theme_override_colors/font_disabled_color = Color(0.823529, 0.258824, 0.203922, 1)
theme_override_fonts/font = ExtResource("1_jbn04")
theme_override_styles/normal = SubResource("StyleBoxFlat_c37yr")
theme_override_styles/hover = ExtResource("3_plbpa")
theme_override_styles/pressed = ExtResource("3_plbpa")
theme_override_styles/disabled = ExtResource("3_plbpa")
theme_override_styles/focus = ExtResource("3_plbpa")
text = "RETRY"

[node name="quit" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 24.0
offset_top = 129.0
offset_right = 80.0
offset_bottom = 152.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.823529, 0.258824, 0.203922, 1)
theme_override_colors/font_pressed_color = Color(0.823529, 0.258824, 0.203922, 1)
theme_override_colors/font_hover_color = Color(0.823529, 0.258824, 0.203922, 1)
theme_override_colors/font_focus_color = Color(0.823529, 0.258824, 0.203922, 1)
theme_override_colors/font_hover_pressed_color = Color(0.823529, 0.258824, 0.203922, 1)
theme_override_colors/font_disabled_color = Color(0.823529, 0.258824, 0.203922, 1)
theme_override_fonts/font = ExtResource("1_jbn04")
theme_override_styles/normal = SubResource("StyleBoxFlat_c37yr")
theme_override_styles/hover = ExtResource("3_plbpa")
theme_override_styles/pressed = ExtResource("3_plbpa")
theme_override_styles/disabled = ExtResource("3_plbpa")
theme_override_styles/focus = ExtResource("3_plbpa")
text = "QUIT"

[node name="main menu" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 24.0
offset_top = 92.0
offset_right = 80.0
offset_bottom = 115.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.823529, 0.258824, 0.203922, 1)
theme_override_colors/font_pressed_color = Color(0.823529, 0.258824, 0.203922, 1)
theme_override_colors/font_hover_color = Color(0.823529, 0.258824, 0.203922, 1)
theme_override_colors/font_focus_color = Color(0.823529, 0.258824, 0.203922, 1)
theme_override_colors/font_hover_pressed_color = Color(0.823529, 0.258824, 0.203922, 1)
theme_override_colors/font_disabled_color = Color(0.823529, 0.258824, 0.203922, 1)
theme_override_fonts/font = ExtResource("1_jbn04")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_c37yr")
theme_override_styles/hover = ExtResource("3_plbpa")
theme_override_styles/pressed = ExtResource("3_plbpa")
theme_override_styles/disabled = ExtResource("3_plbpa")
theme_override_styles/focus = ExtResource("3_plbpa")
text = "Menu"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(128, 104)
texture = ExtResource("6_hb363")
hframes = 8
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_etj2u")
}

[connection signal="pressed" from="retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="main menu" to="." method="_on_main_menu_pressed"]
